# snowfight-server-public

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: options.cmake  (+1 more)
dep/boost/: CMakeLists.txt
dep/maxminddb/: CMakeLists.txt
dep/maxminddb/src/: maxminddb_config.h
dep/protobuf-lite/: CMakeLists.txt
dep/protobuf-lite/google/protobuf/: generated_message_table_driven_lite.h  generated_message_util.h
dep/sqlitecpp/: CMakeLists.txt
dep/sqlitecpp/include/SQLiteCpp/: Column.h
dep/sqlitecpp/sqlite3/: CMakeLists.txt
dep/sqlitecpp/src/: Column.cpp
dep/tinyxml2/: CMakeLists.txt
src/: CMakeLists.txt
src/authserver/: Application.cpp  Application.h  CMakeLists.txt
src/authserver/banned/: BannedManager.cpp  BannedManager.h
src/authserver/handlers/: LogonHandler.cpp
src/authserver/realm/: GeoIPManager.cpp  GeoIPManager.h  RealmInfo.h  RealmManager.cpp  RealmManager.h
src/authserver/server/: AuthSession.cpp  AuthSession.h  AuthSocket.cpp  AuthSocket.h  AuthSocketMgr.cpp  AuthSocketMgr.h
src/authserver/server/protocol/: Opcode.h  OpcodeHandler.cpp  OpcodeHandler.h
src/common/: CMakeLists.txt  Common.h  CompilerDefs.h  Defines.h
src/common/configuration/: Config.cpp  Config.h
src/common/containers/: BlockingQueue.h  ConcurrentQueue.h  Value.cpp  Value.h
src/common/debugging/: Errors.cpp  Errors.h
src/common/logging/: Appender.cpp  Appender.h  AppenderConsole.cpp  AppenderConsole.h  AppenderFile.cpp  AppenderFile.h  Log.cpp  Log.h  LogOperation.cpp  LogOperation.h  Logger.cpp  Logger.h
src/common/networking/: AsyncAcceptor.h  BasicPacket.h  MessageBuffer.h  NetworkThread.h  Socket.h  SocketMgr.h
src/common/threading/: ProcessPriority.h
src/common/utilities/: Random.cpp  Random.h  StringUtil.cpp  StringUtil.h  TimeUtil.cpp  TimeUtil.h  Timer.h  Util.cpp  Util.h
src/ntsserver/: Application.cpp  Application.h  CMakeLists.txt  Main.cpp
src/ntsserver/server/: NTSSocket.cpp  NTSSocket.h  NTSSocketMgr.cpp  NTSSocketMgr.h
src/ntsserver/server/protocol/: Opcode.h  OpcodeHandler.cpp  OpcodeHandler.h
src/worldserver/: Application.cpp  Application.h  CMakeLists.txt
src/worldserver/game/ai/: ObserverRefManager.h  ObserverReference.cpp  ObserverReference.h  PlayerAI.cpp  PlayerAI.h  RobotAI.cpp  RobotAI.h  SparringRobotAI.cpp  SparringRobotAI.h  TargetSelector.cpp  TargetSelector.h  TrainingRobotAI.cpp  TrainingRobotAI.h  UnitAI.h
src/worldserver/game/behaviors/: CarriedItem.cpp  CarriedItem.h  Item.cpp  Item.h  ItemBox.cpp  ItemBox.h  ItemHelper.cpp  ItemHelper.h  LocatorObject.cpp  LocatorObject.h  Object.cpp  Object.h  ObjectShapes.h  Player.cpp  Player.h  Projectile.cpp  Projectile.h  Robot.cpp  Robot.h  Unit.cpp  Unit.h  UnitHelper.cpp  UnitHelper.h  UnitLocator.cpp  UnitLocator.h  WorldObject.cpp  WorldObject.h
src/worldserver/game/collection/: InterestedRefManager.h  InterestedReference.cpp  InterestedReference.h  ItemCollisionRefManager.h  ItemCollisionReference.cpp  ItemCollisionReference.h  WishManager.cpp  WishManager.h
src/worldserver/game/combat/: AwardSourceManager.h  AwardeeReference.cpp  AwardeeReference.h  LaunchRefManager.h  LaunchReference.cpp  LaunchReference.h  ProjectileCollisionRefManager.h  ProjectileCollisionReference.cpp  ProjectileCollisionReference.h  ProjectileHostileRefManager.cpp  ProjectileHostileRefManager.h  ProjectileHostileReference.cpp  ProjectileHostileReference.h  ProjectileThreatManager.cpp  ProjectileThreatManager.h  RewardManager.cpp  RewardManager.h  RobotStaminaUpdater.cpp  RobotStaminaUpdater.h  TrajectoryGenerator.cpp  TrajectoryGenerator.h  UnitHostileRefManager.cpp  UnitHostileRefManager.h  UnitHostileReference.cpp  UnitHostileReference.h  UnitThreatManager.cpp  UnitThreatManager.h
src/worldserver/game/dynamic/: LinkedList.h  TypeContainer.h  TypeContainerFunctions.h  TypeContainerVisitor.h  TypeList.h
src/worldserver/game/entities/: DataBasic.cpp  DataBasic.h  DataCarriedItem.cpp  DataCarriedItem.h  DataItem.cpp  DataItem.h  DataItemBox.cpp  DataItemBox.h  DataLocatorObject.cpp  DataLocatorObject.h  DataPlayer.cpp  DataPlayer.h  DataProjectile.cpp  DataProjectile.h  DataRobot.cpp  DataRobot.h  DataTypes.h  DataUnit.cpp  DataUnit.h  DataUnitLocator.cpp  DataUnitLocator.h  DataWorldObject.cpp  DataWorldObject.h  LocationInfo.cpp  LocationInfo.h  MovementInfo.cpp  MovementInfo.h  ObjectGuid.cpp  ObjectGuid.h  Point.cpp  Point.h  Rect.cpp  Rect.h  Size.cpp  Size.h  StaminaInfo.cpp  StaminaInfo.h  UnitSlotDefines.h
src/worldserver/game/grids/: Grid.h  GridArea.h  GridAreaImpl.h  GridDefines.h  GridNotifiers.cpp  GridNotifiers.h  GridRefManager.h  GridReference.h  ObjectGridLoader.cpp  ObjectGridLoader.h  ObjectSearcher.cpp  ObjectSearcher.h
src/worldserver/game/handlers/: CharacterHandler.cpp  CombatHandler.cpp  GMCommandHandler.cpp  GMCommandWorker.cpp  GMCommandWorker.h  ItemHandler.cpp  MovementHandler.cpp  WorldStatusHandler.cpp
src/worldserver/game/item/: ItemApplication.cpp  ItemApplication.h  ItemApplicationProcesser.cpp  ItemApplicationProcesser.h  ItemCooldown.cpp  ItemCooldown.h  ItemCooldownProcesser.cpp  ItemCooldownProcesser.h
src/worldserver/game/maps/: BattleMap.cpp  BattleMap.h  ExplorArea.cpp  ExplorArea.h  MapData.cpp  MapData.h  MapDataManager.cpp  MapDataManager.h  SpawnManager.cpp  SpawnManager.h  UnitSpawnPointGenerator.cpp  UnitSpawnPointGenerator.h  WaypointNode.cpp  WaypointNode.h
src/worldserver/game/movement/: MotionMaster.cpp  MotionMaster.h  MovementUtil.cpp  MovementUtil.h
src/worldserver/game/server/: WorldSession.cpp  WorldSession.h  WorldSocket.cpp  WorldSocket.h  WorldSocketMgr.cpp  WorldSocketMgr.h
src/worldserver/game/theater/: Theater.cpp  Theater.h  TheaterManager.cpp  TheaterManager.h  TheaterUpdater.cpp  TheaterUpdater.h
src/worldserver/game/tiles/: TileArea.h  TileCoord.cpp  TileCoord.h  TileDefines.h
src/worldserver/game/utils/: MathTools.cpp  MathTools.h
src/worldserver/game/world/: ItemAssignHepler.cpp  ItemAssignHepler.h  Locale.cpp  Locale.h  ObjectAccessor.cpp  ObjectAccessor.h  ObjectMgr.cpp  ObjectMgr.h  World.cpp  World.h
(+155 files in other folders)
